bottom clearance added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </div>
         <p>Forget Password ?</p>
         <p>New to MingleWaves ? <span> Sign Up</span></p>
+        <div class="bottom-clearance"></div>
       </div>
+
     </div>
     <script>
       function somethingClicked(event) {
