--- a/log-in.html
+++ b/log-in.html
@@ -9,7 +9,15 @@
       rel="stylesheet"
     />
 
+    <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-auth-compat.js"></script>
+    <script src="../Firebase/firebaseConfig.js"></script>
+    
+    <script src="../Firebase/anonymousLogin.js"></script>
+    <script src="../Firebase/log-in.js"></script>
+
     <link rel="stylesheet" href="style.css" />
+    <script src="./placeholderAnimation.js"></script>
   </head>
   <body onclick="somethingClicked(event)">
     <div class="container">
@@ -23,37 +31,22 @@
         </div>
         <div class="input-field">
           <div class="hidden-display" id="usernameDisplay"></div>
-          <input type="text" placeholder="User Name" name="" id="username" />
+          <input type="text" placeholder="Email ID" name="" id="username" />
           <div class="hidden-display" id="passwordDisplay"></div>
           <input type="password" name="" placeholder="Password" id="password" />
-          <button type="submit">SUBMIT</button>
+          <button id="verify-phone-number" onclick="logInToMinglewaves()" type="submit">LOG IN</button>
+        </div>
+        <div id="other-signin-options">
+          <div class="other-signin-button" id="email-popup-signin">G Mail</div>
+          <div class="other-signin-button" onclick="signInAnonymously()" id="guest-mode">Continue as Guest</div>
         </div>
         <p>Forget Password ?</p>
-        <p>New to MingleWaves ? <a href="./signup.html"> Sign Up</a></p>
+        <p>New to MingleWaves ? <a href="./Sign Up/signup.html"> Sign Up</a></p>
         <div class="bottom-clearance"></div>
       </div>
 
     </div>
-    <script>
-      function somethingClicked(event) {
-        let usernameField = document.getElementById("username");
-        let passwordField = document.getElementById("password");
-        let usernameDisplay = document.getElementById("usernameDisplay");
-        let passwordDisplay = document.getElementById("passwordDisplay");
 
-        if (event.target === usernameField) {
-          usernameDisplay.style.display='block'
-          usernameDisplay.textContent = "User Name";
-        } else {
-          usernameDisplay.style.display='none'
-        }
-        if (event.target === passwordField) {
-            passwordDisplay.style.display='block'
-          passwordDisplay.textContent = "Password";
-        } else {
-            passwordDisplay.style.display='none'
-        }
-      }
-    </script>
   </body>
+
 </html>
